# study-time-salary-forecast

./: README.md  hello.py  pyproject.toml  study_time_salary_forecast.py  study_time_salary_forecast_using_dt.py
utils/: figures.py  standardization.py
